# ferroscope

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  best-practices.md  claude-mcp-config.json  comprehensive_test.rs  install-for-claude-code.sh
.github/workflows/: ci.yml  release.yml
examples/simple_counter/src/: main.rs
scripts/: test-release.sh
src/: main.rs
test_programs/simple_counter/: Cargo.toml
