[package]
name = "ferroscope"
version = "1.0.1"
edition = "2021"
description = "MCP server that enables AI assistants to debug Rust programs using LLDB and GDB"
license = "MIT"
repository = "https://github.com/douglance/ferroscope"
homepage = "https://github.com/douglance/ferroscope"
documentation = "https://docs.rs/ferroscope"
readme = "README.md"
keywords = ["debugging", "rust", "mcp", "ai", "lldb"]
categories = ["development-tools::debugging", "development-tools"]
authors = ["douglance"]

[[bin]]
name = "ferroscope"
path = "src/main.rs"

[[bin]]
name = "comprehensive-test"
path = "comprehensive_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"

[package.metadata.release]
sign-commit = false
sign-tag = false
pre-release-replacements = [
  {file = "src/main.rs", search = "\"version\": \"[0-9]+\\.[0-9]+\\.[0-9]+\"", replace = "\"version\": \"{{version}}\""},
]
pre-release-commit-message = "Release v{{version}}"
tag-message = "Release v{{version}}"
